--- a/sections/23_other.tex
+++ b/sections/23_other.tex
@@ -10,7 +10,7 @@ The PCI team have also suggested, and will help with, further outputs from the S
 
 \section{Equality, Diversity and Inclusion (EDI)}
 
-Although EDI was not a focus of this particular project's objectives, to build substantial EDI into future work, we have performed the ground work required to link analysis of stroke treatment and outcomes to population demographics for each stroke team. We have combined data from multiple sources (at Lower Super Output Area, LSOA) and collated according to stroke unit catchment areas (estimated by assigning each LSOA to the stroke team with the shortest travel time), and other areas such as Integrated Stroke Delivery Networks, and ambulance trust.
+Although EDI was not a focus of this particular project's objectives, to build substantial EDI into future work, we have performed the ground work required to link analysis of stroke treatment and outcomes to population demographics for each stroke team. We have combined data from multiple sources (at Lower Super Output Area, LSOA) and collated according to stroke team catchment areas (estimated by assigning each LSOA to the stroke team with the shortest travel time), and other areas such as Integrated Stroke Delivery Networks, and ambulance trust.
 
 Data (source data and combined data) and code for this is available at: \url{https://github.com/samuel-book/stroke_unit_demographics}. Analysis is also made available by a web application at: \url{https://stroke-unit-demographics.streamlit.app/Interactive_demo}.
 
