--- a/sections/03_intro.tex
+++ b/sections/03_intro.tex
@@ -24,26 +24,25 @@ Based on national audit data from three years of emergency stroke admissions, we
 
 In our previous work we established that we could predict the use of thrombolysis in patients arriving within 4 hours of known stroke onset with 84.3\% accuracy \cite{allen_use_2022}. We could then ask the question "What if this patient attended another hospital - would they likely be given thrombolysis?" As this was a \emph{`black-box'} decision-forest model we could not effectively explain the relationship between patient level data (`features') and their chance of receiving thrombolysis, or identify and explain the features which different hospitals would differ on. In that work we were also only predicting thrombolysis choice; we were not examining outcomes after stroke with and without thrombolysis, which left open the question of whether stroke teams with higher thrombolysis use were likely to be achieving better outcomes. Incorporating explainability of predictions, and predicting outcomes were therefore key objectives for the current study.
 
-The specific objectives for the current study were:
+The specific objectives for the current study were as follows (Appendix section \ref{sec:objectives_met} reports on how these objectives were met):
 
 \begin{enumerate}
 
-    \item \textbf{Prediction of outcomes} (including benefit and risk of thrombolysis) at an individual patient level.
+    \item \textbf{Co-production of project outputs with clinicians to promote acceptance and use for local quality improvement} by using qualitative research methodologies to ask "What should a machine-learning model based on SSNAP data look like, do, and deliver if it is to optimise improvement, and reduce unwarranted variation, in thrombolysis?
 
-    \item \textbf{Inclusion of a health economics model}, to convert outcomes to quality-adjusted life years (QALYs).
+    \begin{itemize}
+        \item To generate empirically and theoretically informed knowledge about how thrombolysis is currently delivered, centred on physicians’ views, understandings, and practices.
+        \item To learn more about how stroke physicians’ and staff think and feel about or use SSNAP, and about the use of machine learning in improving clinical practice.
+    \end{itemize}  
 
-    \item \textbf{Improve model transparency and explainability} by 1) model simplification through feature selection, and to 2) the addition of Shapley values to show the contribution of individual features to the prediction \cite{aas_explaining_2020}.
+    \item \textbf{Expansion of previous (SAMueL-1) modelling} to include: 1) outcome and adverse event prediction at patient-level, 2) inclusion of pre-hospital times in pathway model, 3) use of organisational factors (such as staffing) in predicting use of thrombolysis, and 4) piloting of a model that incorporates use of thrombectomy alongside thrombolysis.
 
-    \item \textbf{Perform patient clustering or sub-setting of patients} to illustrate similarity/differences in thrombolysis decision-making between hospitals.
+    \item \textbf{Incorporation of health economic outcomes} (Quality Adjusted Life Years, QALYs): These will be adapted from other NIHR projects involving this team that have already developed health economic models for thrombolysis in acute ischaemic stroke.
 
-    \item \textbf{Investigate how well organisation factors (from the SSNAP organisational audit) predict thrombolysis use}, to identify whether aspects of the organisation impacts the decision to treat.
+    \item \textbf{Promote acceptance of the modelling by increased transparency and explainability}: 1) make use of Shapley values to show the contribution of individual features to the prediction that the model is making, 2) improved methods for clustering of patients to clarify patterns of differences in clinical decision-making between hospitals and to allow identification of ‘similar hospitals’ (by patient population) for comparison, 3) investigation of bias in model (e.g. accuracy analysis by patient subgroups), 4) generation of dashboards and other interrogative methods.
 
-    \item Include ambulance response times in patient flow modelling, and test how improvement of ambulance response time would affect thrombolysis use and benefit.
+    \item \textbf{Generation of synthetic data and artificial patient vignettes}: 1) build on pilot work already performed for generating synthetic patient-level stroke data that may be shared freely and used for discussion of ’virtual’ patients, 2) automatic generation of artificial clinical vignettes from real or synthetic SSNAP data.
 
-    \item \textbf{Generation of a web-based dashboard} to allow clinicians to interrogate modelling.
 
-    \item \textbf{Generation of synthetic data and artificial patient vignettes (\textit{virtual patients}, or \textit{prototype patients})} for enhanced sharing of the modelling (sharing working code with data).
-
-    \item \textbf{Co-production of project outputs with clinicians} to promote acceptance and use for local quality improvement.
     
 \end{enumerate}
