--- a/sections/12_paper_2.tex
+++ b/sections/12_paper_2.tex
@@ -6,7 +6,7 @@ To understand, using explainable machine learning, between-hospital variation in
 
 \subsection{Methods overview}
 
-Data describing the 88,928 emergency ischaemic stroke patients who arrived at 132 different stroke teams within 4 hours of stroke onset (from 2016 to 2018) were used to train a machine learning model (XGBoost\cite{chen_xgboost_2016}) to learn which patients would receive thrombolysis at each stroke team. Shapley (SHAP) values were calculated for each prediction, providing estimates of how patient features, and hospital identity, influence the odds of receiving thrombolysis \cite{lundberg_unified_2017}.
+Data describing the 88,928 emergency stroke patients who arrived at 132 different stroke teams within 4 hours of stroke onset (from 2016 to 2018) were used to train a machine learning model (XGBoost\cite{chen_xgboost_2016}) to learn which patients would receive thrombolysis at each stroke team. Shapley (SHAP) values were calculated for each prediction, providing estimates of how patient features, and hospital identity, influence the odds of receiving thrombolysis \cite{lundberg_unified_2017}.
 
 Code, and full results, for the machine learning work may be found at 
  \url{https://samuel-book.github.io/samuel_shap_paper_1}
