Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -73,8 +73,7 @@
 
 \newpage
 %TC:ignore
-%\include{sections/02_abstract}
-\include{sections/02_abstract_572}
+\include{sections/02_abstract}
 %TC:endignore
 \input{sections/03_intro}
 \input{sections/04_study_pathway}
