--- a/sections/02_abstract.tex
+++ b/sections/02_abstract.tex
@@ -2,7 +2,6 @@
 \addcontentsline{toc}{section}{Abstract} %Add non-numbered section to table of contents
 
 \textbf{Background}
-
 Use of thrombolysis to treat emergency stroke patients varies considerably between hospitals. Previous work has shown that the majority of this variation comes from between-hospital decision-making on which patients should receive thrombolysis.
 
 \textbf{Key objectives} % Probably need reducing for abstract
@@ -17,7 +16,7 @@ Use of thrombolysis to treat emergency stroke patients varies considerably betwe
     
     \item Incorporate health economics in patient outcome modelling.
 
-    \item Model patient flow from stroke onset to disability at disability at discharge.
+    \item Model patient flow from stroke onset to disability at discharge.
 
     \item Generate a dashboard to interrogate the model.
 
@@ -46,16 +45,15 @@ Use of thrombolysis to treat emergency stroke patients varies considerably betwe
 
 \begin{itemize}
 
-    \item Qualitative research showed that participants were hopeful the SAMueL-technology could address variance in thrombolysis practice. It was seen as particularly suitable for less experienced clinicians and offered value for training, reviewing clinical cases, and quality improvement. It is important to reassure intended adopters about the integrity of modelling based on this data. Evidence indicated that emergency department physicians may have less confidence in the evidence base for thrombolysis.
+    \item \textbf{Qualitative insights} found optimism among participants about using SAMueL-2 technology to standardise thrombolysis practices, being especially beneficial for less experienced clinicians for training and case review. It identified the importance to reassure adopters about the integrity of modelling based on SSNAP, and that emergency department physicians have less confidence about the evidence base for thrombolysis.
     
-    \item Factors that most affect thrombolysis use in ischaemic stroke are arrival-to-scan time, stroke severity, prior disability, and hospital attended. After adjusting for other patients features, the odds of receiving thrombolysis varied 13-fold between hospitals.
-
-    \item Factors that most affect outcome after stroke are pre-stroke disability, stroke severity, age and use/time of thrombolysis.
+    \item \textbf{Key factors affecting thrombolysis use} in ischaemic stroke are arrival-to-scan time, stroke severity, pre-stroke disability, and the hospital attended. After adjusting for other patient features, a 13-fold variability in thrombolysis odds was observed between-hospitals.
     
-    \item Machine learning demonstrated that thrombolysis was having at least the expected clinical benefit as predicted by the clinical trials. On average, it was predicted that thrombolysis adds 0.26 QALY for each person treated. Stroke teams with higher thrombolysis use are predicted to be generating better patient outcomes.
+    \item \textbf{Key factors affecting outcome} after stroke are pre-stroke disability, stroke severity, age, and use/time of thrombolysis. Machine learning demonstrated that thrombolysis was having at least the expected clinical benefit as predicted by the clinical trials. Thrombolysis was predicted to add an average of 0.26 QALYs per patient treated. Hospitals with higher thrombolysis use are predicted to be generating better patient outcomes.
+    
+    \item Combining \textbf{changes to processes and decision-making} could increase thrombolysis use from 13\% to 20\% among patients arriving by ambulance. Accelerating pathway speed positively influenced outcomes more than thrombolysis rates. A web tool was developed for stroke team-level data interrogation.
 
-    \item By combining changes to processes and decision-making there is potential to increase thrombolysis use from 13\% to 20\% in patients arriving by ambulance. Improving pathway speed has a greater effect on outcomes than on thrombolysis use. A web tool allows interrogation at the level of stroke team.
-\end{itemize}
+    \end{itemize}
 
 \textbf{Conclusions}
 
@@ -66,10 +64,10 @@ Using large-scale observational data and machine learning, thrombolysis, in real
 
 \textbf{What is the problem?} Use of clot-busting treatment (`\textit{thrombolysis}') in stroke varies a great deal between hospitals.
 
-\textbf{What did we know?} We know that the largest cause of this variation is in how doctors decide which patients are suitable for thrombolysis. Some clinicians are worried that the risks can outweigh the benefits, and that use of this treatment in the real world won’t have the same benefits that were predicted by the clinical trials.
+\textbf{What did we know?} We knew that the largest cause of this variation was in how doctors decide which patients are suitable for thrombolysis. Some doctors are worried that the risk from this treatment can outweigh the benefits, and that use of this treatment in the real world won’t have the same benefit that was predicted by the clinical trials.
 
-\textbf{What did we not know?} We did not know (1) how this variation in use of thrombolysis was affecting patient outcomes, (2) what it was about the patients that doctors considered when making decisions, (3) what most affected patient outcome, (4) what doctors would think of using artificial intelligence (`AI') to help understand answers to these questions.
+\textbf{What did we not know?} We did not know (1) how the variation in use of thrombolysis was affecting patient outcomes, (2) what it was about the patients that doctors considered when making decisions, (3) what most affected patient outcome, (4) what doctors would think of using artificial intelligence (`AI') to help understand answers to these questions.
 
-\textbf{What did we do?} We used AI to learn which patients different hospitals would give thrombolysis to, and to learn which patients would likely have a better outcome if this treatment was used.
+\textbf{What did we do?} We used artificial intelligence to learn which patients different hospitals would give thrombolysis to, and to learn which patients would likely have a better outcome if this treatment was used.
 
-\textbf{What did we find?} We found that thrombolysis was at least as effective in real-world use as the original clinical trials predicted, and that hospitals choosing to use it more are very likely saving more lives and reducing disability from stroke. We now understand what factors influence doctors the most when deciding to use it or not, and what most affects patient outcomes. We found that speeding up thrombolysis would not increase the number of people who receive it much, but it would mean everyone receiving it would benefit more. We found that clinicians felt that our work could help improve their practice, but they needed more convincing that our ‘AI’ methods were valid. We are hopeful that our results will give clinicians greater confidence to use this treatment more often and in more patients, and to always give it as fast as possible.
+\textbf{What did we find out?} We found out that thrombolysis was at least as effective in real use as clinical trials predicted, and that hospitals choosing to use it more are very likely saving more lives and reducing disability from stroke. We now understand what doctors look at when deciding to use it or not, and what affects patient outcomes. We found that speeding up giving this treatment would increase the number of people who would receive it, and by everyone receiving it sooner would mean they would each benefit more from it. We now understand that hospitals are making a delicate treatment decision between ‘Miss no benefit’ and ‘Do no harm’, and that many factors contribute to making this complex decision correctly. We found that doctors were interested in our work, but they need to be convinced our ‘Artificial Intelligence’ is right. We are hopeful that our results will give doctors greater confidence to use this treatment more often, and to always give it as fast as possible.
